Use the correct delimiter in exported data csv file

--- a/src/Sitecore.Support.357495/App_Config/Include/zzz/Sitecore.Support.357495.config
+++ b/src/Sitecore.Support.357495/App_Config/Include/zzz/Sitecore.Support.357495.config
@@ -1,9 +1,15 @@
 <configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/" xmlns:role="http://www.sitecore.net/xmlconfig/role/">
-    <sitecore role:require="Standalone or ContentManagement">
-        <services>
-            <register serviceType="Sitecore.ExperienceForms.Data.IExportDataProvider, Sitecore.ExperienceForms" implementationType="Sitecore.ExperienceForms.Client.Data.CsvExportProvider, Sitecore.ExperienceForms.Client">
-                <patch:attribute name="implementationType">Sitecore.Support.ExperienceForms.Client.Data.CsvExportProvider, Sitecore.Support.357495</patch:attribute>
-            </register>
-        </services>
-    </sitecore>
+  <sitecore role:require="Standalone or ContentManagement">
+    <settings>
+        <!-- SITECORE EXPERIENCEFORMS EXPORTDATADELIMITER PARAMETER
+             Specifies the delimiter that is used in the exported data csv file.
+        -->
+        <setting name="Sitecore.ExperienceForms.ExportDataDelimiter" value="," />
+    </settings>
+    <services>
+        <register serviceType="Sitecore.ExperienceForms.Data.IExportDataProvider, Sitecore.ExperienceForms" implementationType="Sitecore.ExperienceForms.Client.Data.CsvExportProvider, Sitecore.ExperienceForms.Client">
+            <patch:attribute name="implementationType">Sitecore.Support.ExperienceForms.Client.Data.CsvExportProvider, Sitecore.Support.357495</patch:attribute>
+        </register>
+    </services>
+  </sitecore>
 </configuration>
